--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ classifiers=
 [options]
 packages = find:
 package_dir =
-    =ballotlab
+    =src/electos/
 include_package_data = True
 install_requires =
    reportlab
