--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = "Testing and prototyping code for BallotMaker, part of ElectOS Versa."
 authors = ["Neil Johnson <neil@cadent.com>"]
 license = "OSET Public License"
+packages = [
+    { include = "electos/ballotmaker", from = "src" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.9"
