Use the (callable) 'app' Typer instance as the script entry point. 'main()' is an unnecessary extra step.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 
 [tool.poetry.scripts]
-ballotmaker = 'electos.ballotmaker.cli:main'
+ballotmaker = 'electos.ballotmaker.cli:app'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
