--- a/.github/workflows/python3.8-app.yml
+++ b/.github/workflows/python3.8-app.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt --use-deprecated=legacy-resolver; fi
+        if [ -f requirements.txt ]; then pip install -r requirements.txt --no-deps; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
