--- a/.github/workflows/python3.8-app.yml
+++ b/.github/workflows/python3.8-app.yml
@@ -23,9 +23,9 @@ jobs:
       with:
         python-version: "3.9"
         cache: "poetry"
-    - run: poetry install
     # install flake8 for testing
-    - run: poetry install flake8
+    - run: poetry add flake8
+    - run: poetry install
     - run: poetry run pytest
     - name: Lint with flake8
       run: |
