--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,10 @@ version = "0.1.0"
 description = "Testing and prototyping code for BallotMaker, part of ElectOS Versa."
 authors = ["Neil Johnson <neil@cadent.com>"]
 license = "OSET Public License"
-packages = [
-    { include = "electos/ballotmaker", from = "src" }
-]
+packages = [{ include = "electos/ballotmaker", from = "src" }]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.8"
 reportlab = "^3.6.9"
 "pdfminer.six" = "^20220506"
 Pillow = "^9.1.1"
