--- a/.github/workflows/python3.8-app.yml
+++ b/.github/workflows/python3.8-app.yml
@@ -17,26 +17,32 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        # specify operating systems
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.8', '3.9', '3.10']
-        exclude:
-          - os: macos-latest
-            python-version: '3.8'
+        # specify python versions to test
+        python-version: ["3.8", "3.9", "3.10"]
+        # total tests = oses X python versions
+        # exclude:
+        #  - os: macos-latest
+        #    python-version: '3.8'
     steps:
-    - uses: actions/checkout@v3
-    - name: Install poetry
-      run: pipx install poetry
-    - uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-        cache: "poetry"
-    # install flake8 for testing
-    - run: poetry add flake8
-    - run: poetry install
-    - run: poetry run pytest
-    - name: lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      # steps indented by YAML extension
+      - uses: actions/checkout@v3
+      - name: Install poetry
+        run: pipx install poetry
+      - uses: actions/setup-python@v4
+        with:
+          #  loop through each version of python specified
+          python-version: ${{ matrix.python-version }}
+          # poetry cache required to use poetry
+          cache: "poetry"
+      # install flake8 for testing
+      - run: poetry add flake8
+      - run: poetry install
+      - run: poetry run pytest
+      - name: lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
