--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ reportlab = "^3.6.9"
 Pillow = "^9.1.1"
 typer = "^0.4.1"
 
-"electos.nist-datamodels" = { git = "https://github.com/ion-oset/nist-data-models.git", rev = "python/main" }
+"electos.nist-datamodels" = { git = "https://github.com/ion-oset/nist-data-models.git", rev = "python/model-index" }
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
